FIX: removes shift which is not necessary anymore
Im not exactly sure why it's not necessary anymore, but it's certainly the cause of an actual shift today.

--- a/plugins/chat/assets/stylesheets/common/chat-scroll-to-bottom.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-scroll-to-bottom.scss
@@ -32,7 +32,6 @@
 
     .d-icon {
       color: var(--secondary);
-      margin-left: 1px; // "fixes" the 1px svg shift
     }
 
     > * {
